--- a/src/Template/cup/docs/dev/api.twig
+++ b/src/Template/cup/docs/dev/api.twig
@@ -14,6 +14,9 @@
             <div class="accordion accordion-secondary">
                 <ul class="nav nav-pills nav-secondary" id="pills-tab" role="tablist">
                     <li class="nav-item">
+                        <a class="nav-link" id="v-api-tab-user" data-toggle="pill" href="#v-api-file">File</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" id="v-api-tab-user" data-toggle="pill" href="#v-api-publication">Publication</a>
                     </li>
                     <li class="nav-item submenu">
@@ -21,6 +24,9 @@
                     </li>
                 </ul>
                 <div class="tab-content">
+                    <div class="tab-pane fade" id="v-api-file">
+                        {% include 'cup/docs/dev/api/file.twig' %}
+                    </div>
                     <div class="tab-pane fade" id="v-api-publication">
                         {% include 'cup/docs/dev/api/publication.twig' %}
                     </div>
