--- a/src/Template/cup/docs/dev/api/catalog.twig
+++ b/src/Template/cup/docs/dev/api/catalog.twig
@@ -1,7 +1,7 @@
 <div class="pt-2">
     <h3>Каталог товаров</h3>
 
-    <ul class="mt-3 mb-5">
+    <ul class="mt-3 mb-3">
         <li>Список категорий товаров</li>
         <li>Список товаров</li>
     </ul>
@@ -16,15 +16,15 @@
     <h5>Параметры запроса</h5>
     {% include "cup/docs/dev/api-table-params.twig" with {
         "list": collect([
-            {'key': 'uuid[]', 'description': 'Уникальный идентификатор категории'},
-            {'key': 'parent[]', 'description': 'Идентификатор родительской категории'},
-            {'key': 'address', 'description': 'Адрес категории'},
-            {'key': 'status', 'description': 'Статус категории', 'default': 'work'},
-            {'key': 'external_id', 'description': 'Внешний идентификатор'},
+            {"key": "uuid[]", "description": "Уникальный идентификатор категории"},
+            {"key": "parent[]", "description": "Идентификатор родительской категории"},
+            {"key": "address", "description": "Адрес категории"},
+            {"key": "status", "description": "Статус категории", "default": "work"},
+            {"key": "external_id", "description": "Внешний идентификатор"},
 
-            {'key': 'order[]', 'description': 'Сортировка по указанным полям'},
-            {'key': 'limit', 'description': 'Количество строк результатов', 'default': '1000'},
-            {'key': 'offset', 'description': 'Отступ строк от начала'},
+            {"key": "order[]", "description": "Сортировка по указанным полям"},
+            {"key": "limit", "description": "Количество строк результатов", "default": "1000"},
+            {"key": "offset", "description": "Отступ строк от начала"},
         ])
     } %}
 
@@ -40,15 +40,15 @@
     <h5>Параметры запроса</h5>
     {% include "cup/docs/dev/api-table-params.twig" with {
         "list": collect([
-            {'key': 'uuid[]', 'description': 'Уникальный идентификатор категории'},
-            {'key': 'category[]', 'description': 'Идентификатор категории'},
-            {'key': 'address', 'description': 'Адрес товара'},
-            {'key': 'status', 'description': 'Статус товара', 'default': 'work'},
-            {'key': 'external_id', 'description': 'Внешний идентификатор'},
+            {"key": "uuid[]", "description": "Уникальный идентификатор категории"},
+            {"key": "category[]", "description": "Идентификатор категории"},
+            {"key": "address", "description": "Адрес товара"},
+            {"key": "status", "description": "Статус товара", "default": "work"},
+            {"key": "external_id", "description": "Внешний идентификатор"},
 
-            {'key': 'order[]', 'description': 'Сортировка по указанным полям'},
-            {'key': 'limit', 'description': 'Количество строк результатов', 'default': '1000'},
-            {'key': 'offset', 'description': 'Отступ строк от начала'},
+            {"key": "order[]", "description": "Сортировка по указанным полям"},
+            {"key": "limit", "description": "Количество строк результатов", "default": "1000"},
+            {"key": "offset", "description": "Отступ строк от начала"},
         ])
     } %}
 </div>
