--- a/src/Template/cup/docs/dev/api/publication.twig
+++ b/src/Template/cup/docs/dev/api/publication.twig
@@ -1,7 +1,7 @@
 <div class="pt-2">
     <h3>Публикации на сайте</h3>
 
-    <ul class="mt-3 mb-5">
+    <ul class="mt-3 mb-3">
         <li>Список категорий публикаций</li>
         <li>Список публикаций</li>
     </ul>
@@ -16,13 +16,13 @@
     <h5>Параметры запроса</h5>
     {% include "cup/docs/dev/api-table-params.twig" with {
         "list": collect([
-            {'key': 'uuid[]', 'description': 'Уникальный идентификатор категории'},
-            {'key': 'parent[]', 'description': 'Идентификатор родительской категории'},
-            {'key': 'address', 'description': 'Адрес категории'},
+            {"key": "uuid[]", "description": "Уникальный идентификатор категории"},
+            {"key": "parent[]", "description": "Идентификатор родительской категории"},
+            {"key": "address", "description": "Адрес категории"},
 
-            {'key': 'order[]', 'description': 'Сортировка по указанным полям'},
-            {'key': 'limit', 'description': 'Количество строк результатов', 'default': '1000'},
-            {'key': 'offset', 'description': 'Отступ строк от начала'},
+            {"key": "order[]", "description": "Сортировка по указанным полям"},
+            {"key": "limit", "description": "Количество строк результатов", "default": "1000"},
+            {"key": "offset", "description": "Отступ строк от начала"},
         ])
     } %}
 
@@ -38,13 +38,13 @@
     <h5>Параметры запроса</h5>
     {% include "cup/docs/dev/api-table-params.twig" with {
         "list": collect([
-            {'key': 'uuid[]', 'description': 'Уникальный идентификатор публикации'},
-            {'key': 'category[]', 'description': 'Идентификатор родительской категории'},
-            {'key': 'address', 'description': 'Адрес публикации'},
+            {"key": "uuid[]", "description": "Уникальный идентификатор публикации"},
+            {"key": "category[]", "description": "Идентификатор родительской категории"},
+            {"key": "address", "description": "Адрес публикации"},
 
-            {'key': 'order[]', 'description': 'Сортировка по указанным полям'},
-            {'key': 'limit', 'description': 'Количество строк результатов', 'default': '1000'},
-            {'key': 'offset', 'description': 'Отступ строк от начала'},
+            {"key": "order[]", "description": "Сортировка по указанным полям"},
+            {"key": "limit", "description": "Количество строк результатов", "default": "1000"},
+            {"key": "offset", "description": "Отступ строк от начала"},
         ])
     } %}
 </div>
