--- a/src/Template/cup/docs/dev/structures/page.twig
+++ b/src/Template/cup/docs/dev/structures/page.twig
@@ -1,89 +1,62 @@
 <div class="pt-2">
-    <h4>Модель динамической страницы</h4>
+    <h3>Модель динамической страницы</h3>
 
-    <h5>Поля</h5>
-    <table class="table">
-        <tr>
-            <th>Поле</th>
-            <th width="10%">Тип</th>
-            <th>Описание</th>
-            <th width="5%">Required</th>
-            <th width="5%">Unique</th>
-            <th width="5%">Null</th>
-        </tr>
-        <tr>
-            <td>uuid</td>
-            <td>Uuid(36)</td>
-            <td>Уникальный идентификатор</td>
-            <td class="text-center">+</td>
-            <td class="text-center">+</td>
-            <td class="text-center">-</td>
-        </tr>
-        <tr>
-            <td>address</td>
-            <td>String(255)</td>
-            <td>Адрес страницы</td>
-            <td class="text-center">+</td>
-            <td class="text-center">+</td>
-            <td class="text-center">-</td>
-        </tr>
-        <tr>
-            <td>title</td>
-            <td>String(255)</td>
-            <td>Заголовок</td>
-            <td class="text-center">+</td>
-            <td class="text-center">-</td>
-            <td class="text-center">-</td>
-        </tr>
-        <tr>
-            <td>date</td>
-            <td>DateTime</td>
-            <td>Дата публикации</td>
-            <td class="text-center">+</td>
-            <td class="text-center">-</td>
-            <td class="text-center">-</td>
-        </tr>
-        <tr>
-            <td>content</td>
-            <td>String</td>
-            <td>Содержимое страницы</td>
-            <td class="text-center">+</td>
-            <td class="text-center">-</td>
-            <td class="text-center">-</td>
-        </tr>
-        <tr>
-            <td>type</td>
-            <td>PageTypeType(50)</td>
-            <td>Имя пользователя</td>
-            <td class="text-center">+</td>
-            <td class="text-center">-</td>
-            <td class="text-center">-</td>
-        </tr>
-        <tr>
-            <td>meta</td>
-            <td>array[title,description,keywords]</td>
-            <td>Мета теги</td>
-            <td class="text-center">-</td>
-            <td class="text-center">-</td>
-            <td class="text-center">-</td>
-        </tr>
-        <tr>
-            <td>template</td>
-            <td>String(50)</td>
-            <td>Шаблон страницы</td>
-            <td class="text-center">+</td>
-            <td class="text-center">-</td>
-            <td class="text-center">-</td>
-        </tr>
+    <ul class="mt-3 mb-3">
+        <li>Поля</li>
+    </ul>
 
-    </table>
-
-    <h5>Методы</h5>
-    <table class="table">
-        <tr>
-            <th width="30%">Сигнатура</th>
-            <th>Описание</th>
-            <th width="10%">Результат</th>
-        </tr>
-    </table>
+    <h4>Поля</h4>
+    {% include "cup/docs/dev/structures-table-fields.twig" with {
+        "list": collect([
+            {
+                "field": "uuid",
+                "type": "Uuid(36)",
+                "description": "Уникальный идентификатор",
+                "requried": true,
+                "unique": true,
+            },
+            {
+                "field": "address",
+                "type": "String(255)",
+                "description": "Адрес страницы",
+                "requried": true,
+                "unique": true,
+            },
+            {
+                "field": "title",
+                "type": "String(255)",
+                "description": "Заголовок",
+                "requried": true,
+            },
+            {
+                "field": "date",
+                "type": "DateTime",
+                "description": "Дата публикации",
+                "requried": true,
+            },
+            {
+                "field": "content",
+                "type": "String",
+                "description": "Содержимое страницы",
+                "requried": true,
+            },
+            {
+                "field": "type",
+                "type": "PageTypeType",
+                "description": "Тип содержимого страницы",
+                "requried": true,
+            },
+            {
+                "field": "meta",
+                "type": "array[title,description,keywords]",
+                "description": "Мета теги",
+            },
+            {
+                "field": "template",
+                "type": "String(50)",
+                "description": "Шаблон страницы",
+                "null": true,
+            },
+        ])
+    } %}
 </div>
