все сущности описаны в документации #16

--- a/src/Template/cup/docs/dev/api-table-params.twig
+++ b/src/Template/cup/docs/dev/api-table-params.twig
@@ -7,7 +7,7 @@
         <tr>
             <td>{{ item.key }} {{ item.requried ? '<b>*</b>'|raw : '' }}</td>
             <td>
-                {{ item.description }}
+                {{ item.description|raw }}
                 {% if item.default %}
                     <span class="d-block text-muted">по-умолчанию: {{ item.default }}</span>
                 {% endif %}
