--- a/src/Template/cup/docs/dev/api/publication.twig
+++ b/src/Template/cup/docs/dev/api/publication.twig
@@ -1,5 +1,5 @@
 <div class="pt-2">
-    <h3>Публикации на сайте</h3>
+    <h3>Публикации</h3>
 
     <ul class="mt-3 mb-3">
         <li>Список категорий публикаций</li>
