--- a/src/Template/cup/docs/dev/structures/guestbook.twig
+++ b/src/Template/cup/docs/dev/structures/guestbook.twig
@@ -1,6 +1,8 @@
 <div class="pt-2">
     <h3>Модель записи в Гостевой Книге</h3>
 
+    <code class="block pt-3 pb-3">App\Domain\Entities\GuestBook</code>
+
     <ul class="mt-3 mb-3">
         <li>Поля</li>
     </ul>
