--- a/src/Template/cup/docs/dev/structures/parameter.twig
+++ b/src/Template/cup/docs/dev/structures/parameter.twig
@@ -1,6 +1,8 @@
 <div class="pt-2">
     <h3>Модель параметров (настройки)</h3>
 
+    <code class="block pt-3 pb-3">App\Domain\Entities\Parameter</code>
+
     <ul class="mt-3 mb-3">
         <li>Поля</li>
     </ul>
