--- a/src/Template/cup/docs/dev/structures/publication.twig
+++ b/src/Template/cup/docs/dev/structures/publication.twig
@@ -1,7 +1,7 @@
 <div class="pt-2">
-    <h3>Модель динамической страницы</h3>
+    <h3>Модель публикации</h3>
 
-    <code class="block pt-3 pb-3">App\Domain\Entities\Page</code>
+    <code class="block pt-3 pb-3">App\Domain\Entities\Publication</code>
 
     <ul class="mt-3 mb-3">
         <li>Поля</li>
@@ -20,45 +20,43 @@
             {
                 "field": "address",
                 "type": "String(255)",
-                "description": "Адрес страницы",
+                "description": "Уникальный адрес публикации",
                 "requried": true,
                 "unique": true,
             },
             {
                 "field": "title",
                 "type": "String(255)",
-                "description": "Заголовок страницы",
+                "description": "Заголовок публикации",
+                "requried": true,
+            },
+            {
+                "field": "category",
+                "type": "Uuid(36)",
+                "description": "Идентификатор категории публикаций",
                 "requried": true,
             },
             {
                 "field": "date",
                 "type": "DateTime",
-                "description": "Дата создания",
+                "description": "Дата публикации",
                 "requried": true,
             },
             {
                 "field": "content",
-                "type": "String",
-                "description": "Содержимое страницы",
-                "requried": true,
+                "type": "array[short,full]",
+                "description": "Содержимое публикации",
             },
             {
-                "field": "type",
-                "type": "PageTypeType",
-                "description": "Тип содержимого страницы",
-                "requried": true,
+                "field": "poll",
+                "type": "array[question,answer]",
+                "description": "Опрос в публикации",
             },
             {
                 "field": "meta",
                 "type": "array[title,description,keywords]",
                 "description": "Мета теги",
-            },
-            {
-                "field": "template",
-                "type": "String(50)",
-                "description": "Шаблон",
-                "null": true,
-            },
+            }
         ])
     } %}
 </div>
