--- a/src/Template/cup/docs/dev/structures/user.twig
+++ b/src/Template/cup/docs/dev/structures/user.twig
@@ -1,6 +1,8 @@
 <div class="pt-2">
     <h3>Модель пользователя</h3>
 
+    <code class="block pt-3 pb-3">App\Domain\Entities\User</code>
+
     <ul class="mt-3 mb-3">
         <li>Поля</li>
         <li>Методы</li>
@@ -75,11 +77,6 @@
                 "field": "change",
                 "type": "DateTime",
                 "description": "Дата последнего изменения пользователя",
-            },
-            {
-                "field": "session",
-                "type": "App\Domain\Entities\User\Session",
-                "description": "Сессия пользователя",
             }
         ])
     } %}
