добавил информацию по работе с движком #16

--- a/src/Template/cup/docs/dev/structures/page.twig
+++ b/src/Template/cup/docs/dev/structures/page.twig
@@ -1,5 +1,5 @@
 <div class="pt-2">
-    <h3>Модель динамической страницы</h3>
+    <h3>Модель страницы</h3>
 
     <code class="block pt-3 pb-3">App\Domain\Entities\Page</code>
 
