--- a/src/Template/cup/docs/index.twig
+++ b/src/Template/cup/docs/index.twig
@@ -23,19 +23,19 @@
                                     <i class="fas fa-book"></i>
                                     Общая информация
                                 </a>
-                                {#<a class="nav-link" id="v-pills-profile-tab-icons" data-toggle="pill" href="#docs-engine">
+                                <a class="nav-link" id="v-pills-profile-tab-icons" data-toggle="pill" href="#docs-engine">
                                     <i class="fas fa-book"></i>
                                     Работа с движком
-                                </a>#}
-                                {#<a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-panel">
+                                </a>
+                                <a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-panel">
                                     <i class="fas fa-book"></i>
                                     Работа с админпанелью (ЦУП)
-                                </a>#}
-                                {#<a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-template">
+                                </a>
+                                <a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-template">
                                     <i class="fas fa-book"></i>
                                     Шаблоны
-                                </a>#}
-                                <a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-developer">
+                                </a>
+                                <a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-dev">
                                     <i class="fas fa-book"></i>
                                     Разработчикам
                                 </a>
@@ -50,45 +50,19 @@
                                     </div>
                                 </div>
                                 <div class="tab-pane fade" id="docs-engine">
-                                    Установка скрипта
-                                    Обновление скрипта
-                                    Начало работы и шаблоны
-                                    Вывод новостей на страницах
+                                    <div class="accordion accordion-secondary">
+                                        {% include 'cup/docs/engine/requirements.twig' %}
+                                        {% include 'cup/docs/engine/install.twig' %}
+                                        {% include 'cup/docs/engine/update.twig' %}
+                                    </div>
                                 </div>
-                                <div class="tab-pane fade" id="docs-panel">
-                                    Настройка системы
-                                    Добавление новостей
-                                    Редактирование новостей
-                                    Настройка категорий
-                                    Статические страницы
-                                    Система логов админпанели
-                                </div>
-                                <div class="tab-pane fade" id="docs-template">
-                                    Общая информация
-                                    Главная страница сайта
-                                    Статические страницы
-                                    Краткое содержание новости
-                                    Новость целиком
-                                    Опросы в новостях
-                                    Комментарии
-                                    Меню категорий
-                                    Регистрация на сайте
-                                    Авторизации на сайте
-                                    Профиль пользователя
-                                    Карточка профиля пользователя
-                                    Форма для отправки E-Mail
-                                    Восстановление пароля
-                                </div>
-                                <div class="tab-pane fade" id="docs-developer">
+                                <div class="tab-pane fade" id="docs-panel"></div>
+                                <div class="tab-pane fade" id="docs-template"></div>
+                                <div class="tab-pane fade" id="docs-dev">
                                     <div class="accordion accordion-secondary">
                                         {% include 'cup/docs/dev/structures.twig' %}
-                                    </div>
-                                    <div class="accordion accordion-secondary">
                                         {% include 'cup/docs/dev/api.twig' %}
                                     </div>
-                                    Разработка и подключение модулей
-                                    Подключение модулей в адмипанели
-                                    API для разработки модулей
                                 </div>
                             </div>
                         </div>
