--- a/src/Template/cup/docs/index.twig
+++ b/src/Template/cup/docs/index.twig
@@ -31,10 +31,6 @@
                                     <i class="fas fa-book"></i>
                                     Работа с админпанелью (ЦУП)
                                 </a>
-                                <a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-template">
-                                    <i class="fas fa-book"></i>
-                                    Шаблоны
-                                </a>
                                 <a class="nav-link" id="v-pills-buy-tab-icons" data-toggle="pill" href="#docs-dev">
                                     <i class="fas fa-book"></i>
                                     Разработчикам
@@ -56,10 +52,18 @@
                                         {% include 'cup/docs/engine/update.twig' %}
                                     </div>
                                 </div>
-                                <div class="tab-pane fade" id="docs-panel"></div>
-                                <div class="tab-pane fade" id="docs-template"></div>
+                                <div class="tab-pane fade" id="docs-panel">
+                                    <div class="accordion accordion-secondary">
+                                        {% include 'cup/docs/panel/settings.twig' %}
+                                        {% include 'cup/docs/panel/publication.twig' %}
+                                        {% include 'cup/docs/panel/publication-category.twig' %}
+                                        {% include 'cup/docs/panel/page.twig' %}
+                                    </div>
+                                </div>
                                 <div class="tab-pane fade" id="docs-dev">
                                     <div class="accordion accordion-secondary">
+                                        {% include 'cup/docs/dev/summary.twig' %}
+                                        {% include 'cup/docs/dev/twig.twig' %}
                                         {% include 'cup/docs/dev/structures.twig' %}
                                         {% include 'cup/docs/dev/api.twig' %}
                                     </div>
