правки по документации #16

--- a/src/Template/cup/docs/dev/templates.twig
+++ b/src/Template/cup/docs/dev/templates.twig
@@ -4,7 +4,7 @@
             <div class="flaticon-box-1"></div>
         </div>
         <div class="span-title">
-            Общая информация
+            Шаблоны
         </div>
         <div class="span-mode"></div>
     </div>
