--- a/src/Template/cup/docs/index.twig
+++ b/src/Template/cup/docs/index.twig
@@ -62,7 +62,7 @@
                                 </div>
                                 <div class="tab-pane fade" id="docs-dev">
                                     <div class="accordion accordion-secondary">
-                                        {% include 'cup/docs/dev/summary.twig' %}
+                                        {% include 'cup/docs/dev/templates.twig' %}
                                         {% include 'cup/docs/dev/twig.twig' %}
                                         {% include 'cup/docs/dev/structures.twig' %}
                                         {% include 'cup/docs/dev/api.twig' %}
