добавил twig qr_code #16

--- a/src/Template/cup/docs/dev/twig.twig
+++ b/src/Template/cup/docs/dev/twig.twig
@@ -44,6 +44,7 @@
                 <li><b>is_current_page_number()</b> - сравнивает номер pagination с переданным</li>
                 <li><b>current_page_number($number)</b> - возвращает текущий номер pagination</li>
                 <li><b>pushstream_channel($user_uuid)</b> - возвращает канал pushstream для текущего пользователя</li>
+                <li><b>qr_code($value, $width = 256, $height = 256)</b> - возвращает img тег с qr кодом в base64</li>
             </ul>
 
             <span class="d-block text-muted">(files functions)</span>
