--- a/src/Template/cup/docs/dev/api/catalog.twig
+++ b/src/Template/cup/docs/dev/api/catalog.twig
@@ -44,6 +44,8 @@
             {"key": "category[]", "description": "Идентификатор категории"},
             {"key": "address", "description": "Адрес товара"},
             {"key": "status", "description": "Статус товара", "default": "work"},
+            {"key": "vendorcode", "description": "Артикул"},
+            {"key": "barcode", "description": "QR/Bar код"},
             {"key": "external_id", "description": "Внешний идентификатор"},
 
             {"key": "order[]", "description": "Сортировка по указанным полям"},
