изменен порядок меню

--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -70,8 +70,8 @@
             <div class="collapse" id="nav-catalog">
                 <ul class="nav nav-collapse">
                     <li>
-                        <a href="/cup/catalog/order">
-                            <span class="sub-item">Заказы</span>
+                        <a href="/cup/catalog/product">
+                            <span class="sub-item">Номенклатура</span>
                         </a>
                     </li>
                     <li>
@@ -80,8 +80,8 @@
                         </a>
                     </li>
                     <li>
-                        <a href="/cup/catalog/product">
-                            <span class="sub-item">Товары</span>
+                        <a href="/cup/catalog/order">
+                            <span class="sub-item">Заказы</span>
                         </a>
                     </li>
                 </ul>
