--- a/src/Template/cup/catalog/product/index.twig
+++ b/src/Template/cup/catalog/product/index.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">Каталог</h2>
+                <h2 class="text-white pb-2 fw-bold">Номенклатура</h2>
             </div>
         </div>
     </div>
@@ -21,7 +21,7 @@
                                 <i class="fas fa-arrow-left"></i>
                             </a>
                         {% endif %}
-                        <h4 class="card-title">Список товаров {{ category ? 'в категории ' ~ category.title : '' }} ({{ products.count() }})</h4>
+                        <h4 class="card-title">Номенклатура {{ category ? 'в категории ' ~ category.title : '' }} ({{ products.count() }})</h4>
 
                         <a href="#btn-modal-scan" rel="modal:open" class="btn btn-icon btn-info ml-auto">
                             <i class="fas fa-barcode"></i>
