обновил инструменты для работы с каталогом товаров у клиента, восстановил проверку рекапчи и привязку заказа к клиенту
#37

--- a/src/Template/cup/catalog/barcode-scan.twig
+++ b/src/Template/cup/catalog/barcode-scan.twig
@@ -3,9 +3,9 @@
 {% block title %}Сканер товаров{% endblock %}
 
 {% block head %}
-    {{ styles.append('/assets/css/bootstrap.min.css') }}
-    {{ scripts.append('/assets/js/core/jquery.3.2.1.min.js') }}
-    {{ scripts.append('/assets/js/plugin/zxing/index.min.js') }}
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+    <script src="/assets/js/core/jquery.3.2.1.min.js"></script>
+    <script src="/assets/js/plugin/zxing/index.min.js"></script>
 {% endblock %}
 
 {% block bodyinner %}
