--- a/theme/default/common/header.twig
+++ b/theme/default/common/header.twig
@@ -17,7 +17,7 @@
                         <div class="up-item float-right">
                             <div class="shopping-card">
                                 <i class="flaticon-bag"></i>
-                                <span class="simpleCart_quantity">0</span>
+                                <span data-catalog-cart-count>0</span>
                             </div>
                             <a href="/cart">Корзина</a>
                         </div>
