--- a/theme/default/catalog.category.twig
+++ b/theme/default/catalog.category.twig
@@ -9,6 +9,19 @@
 {% endblock %}
 
 {% block page %}
+    <script>
+        window.catalog = {
+            events: {
+                'on:cart:add': (data) => {
+                    Swal.fire('Товар добавлен', data.title + ' (x' + data.quantity + ') теперь в корзине.', 'success');
+                },
+                'on:cart:update': (data) => {
+                    Swal.fire('Товар обновлен', data.title + ' (x' + data.quantity + ')', 'success');
+                }
+            }
+        }
+    </script>
+
     <div class="page-top-info">
         <div class="container">
             <h4>{{ category.meta.title ? category.meta.title : (category.title ?? 'Каталог') }}</h4>
