--- a/theme/default/catalog.product.twig
+++ b/theme/default/catalog.product.twig
@@ -9,6 +9,19 @@
 {% endblock %}
 
 {% block page %}
+    <script>
+        window.catalog = {
+            events: {
+                'on:cart:add': (data) => {
+                    Swal.fire('Товар добавлен', data.title + ' (x' + data.quantity + ') теперь в корзине.', 'success');
+                },
+                'on:cart:update': (data) => {
+                    Swal.fire('Товар обновлен', data.title + ' (x' + data.quantity + ')', 'success');
+                }
+            }
+        }
+    </script>
+
     <div class="page-top-info">
         <div class="container">
             <h4>{{ category.meta.title ? category.meta.title : (category.title ?? 'Каталог') }}</h4>
@@ -22,7 +35,7 @@
         </div>
     </div>
 
-    <section class="product-section simpleCart_shelfItem">
+    <section class="product-section" data-catalog-product>
         <div class="container">
             <div class="back-link">
                 <a href="/{{ parameter('catalog_address', 'catalog') }}/{{ category.address }}">&lt;&lt; В категорию "{{ category.title }}"</a>
@@ -51,12 +64,12 @@
                     <div class="quantity">
                         <p>Количество</p>
                         <div class="pro-qty">
-                            <input type="text" class="item_quantity" value="1">
+                            <input type="text" class="item_quantity" data-catalog-product-attr="quantity" value="1">
                         </div>
                     </div>
 
                     {# add class item_add to btn #}
-                    <a href="javascript:;" class="site-btn item_add">В корзину</a>
+                    <a href="javascript:;" class="site-btn" data-catalog-product-add>В корзину</a>
 
                     <div id="accordion" class="accordion-area">
                         <div class="panel">
